--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <table cellspacing="20">
     <tr>
-      <td><img src="images/tasos.png" alt="tasos naziris profile picure"></td>
+      <td><img src="images/photo.jpg" alt="tasos naziris profile picure"></td>
       <td><h1>Tasos Naziris</h1>
       <p><em>Work as many year in <strong><a href="https://en.wikipedia.org/wiki/Audio_engineer">sound engineering</a></strong></em></p>
       <p>I am a sound engineering/music technician. My research focuses on the interaction of electronic music</p></td>
