--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       <td><img src="images/tasos.png" alt="tasos naziris profile picure"></td>
       <td><h1>Tasos Naziris</h1>
       <p><em>Work as many year in <strong><a href="https://en.wikipedia.org/wiki/Audio_engineer">sound engineering</a></strong></em></p>
-      <p>I am a dj at decadance club. My research focuses on the interaction of electronic music, and the roles they play in large-scale social and information systems. </p></td>
+      <p>I am a sound engineering/mucic technician. My research focuses on the interaction of electronic music. </p></td>
     </tr>
   </table>
   <hr>
